# GameEngine

./: CMakeLists.txt  main.cpp
Core/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
Core/ResourceManager/: FontResource.cpp  FontResource.h  Resource.cpp  Resource.h  ResourceLoader.cpp  ResourceLoader.h  ResourceManager.cpp  ResourceManager.h  TextureResource.cpp  TextureResource.h
Core/Silhouette/: RectangularSilhouette.cpp  RectangularSilhouette.h  Silhouette.cpp  Silhouette.h
Core/Structure/: GameObject.h  Scene.h  Sprite.cpp  Tile.cpp  Tile.h
GameObjects/: Cell.cpp  Cell.h  Field.cpp  Field.h  Logo.cpp  Logo.h
Models/: BaseModel.cpp  BaseModel.h  Field.cpp  FieldModel.h  TileModel.cpp  TileModel.h
ResourceLoaders/: MainSceneResourceLoader.cpp  MainSceneResourceLoader.h
Scenes/: MainScene.cpp  MainScene.h
Views/: BaseView.cpp  BaseView.h  FieldView.cpp  FieldView.h  TileView.cpp  TileView.h
cmake_modules/: FindSFML.cmake
